--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>JRQuiz</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -110,3 +110,4 @@
   </body>
   <script src="main.js"></script>
 </html>
+
